@@ -265,6 +265,7 @@ exif_mnote_data_olympus_load (ExifMnoteData *en,
 	exif_mnote_data_olympus_clear (n);
 
 	n->entries = malloc (sizeof (MnoteOlympusEntry) * c);
+	if (!n->entries) return;
 	memset (n->entries, 0, sizeof (MnoteOlympusEntry) * c);
 
 	/* Parse the entries */
